Bug 875675 - Remove prefs mail.account.accountX.identities and mail.account.accountX.server when an account is deleted. r=Neil