mailnews/base/src/nsMsgAccountManager.cpp
@@ -712,7 +712,11 @@ nsMsgAccountManager::RemoveAccount(nsIMsgAccount *aAccount)
     }
   }
 
-  aAccount->ClearAllValues();
+  // It is not a critical problem if this fails as the account was already
+  // removed from the list of accounts so should not ever be referenced.
+  // Just print it out for debugging.
+  rv = aAccount->ClearAllValues();
+  NS_ASSERTION(NS_SUCCEEDED(rv), "removing of account prefs failed");
   return NS_OK;
 }
 
